[gd_scene load_steps=2 format=3 uid="uid://dj2sj4rurva0x"]

[ext_resource type="Script" uid="uid://d1sm5fc3ifl2h" path="res://Scripts/volume_slider.gd" id="1_0rqdt"]

[node name="VolumeSlider" type="HSlider"]
offset_left = 114.0
offset_top = 117.0
offset_right = 331.0
offset_bottom = 133.0
max_value = 1.0
step = 0.001
value = 0.75
script = ExtResource("1_0rqdt")

[connection signal="drag_ended" from="." to="." method="_on_drag_ended"]
[connection signal="drag_started" from="." to="." method="_on_drag_started"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
